# libaffa

./: AUTHORS  CHANGES  ChangeLog  HACKING  Makefile.in  README  aclocal.m4  autogen.sh  config.guess  config.sub  configure  configure.in  ltmain.sh  missing  mkinstalldirs
doc/: README
examples/: Makefile.am  Makefile.in  README  configure  configure.in  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  plot.sh
src/: Makefile.am  Makefile.in  aa.h  aa_aaf.h  aa_aafapprox.cpp  aa_aafarithm.cpp  aa_aafcommon.cpp  aa_aaftrigo.cpp  aa_interval.cpp  aa_interval.h  aa_rounding.cpp  aa_rounding.h  aa_util.h
