AC_INIT(README)

AAF_MAJOR_VERSION=0
AAF_MINOR_VERSION=9
AAF_MICRO_VERSION=4
AAF_INTERFACE_AGE=0
AAF_BINARY_AGE=0
AAF_VERSION=$AAF_MAJOR_VERSION.$AAF_MINOR_VERSION.$AAF_MICRO_VERSION

AC_SUBST(AAF_MAJOR_VERSION)
AC_SUBST(AAF_MINOR_VERSION)
AC_SUBST(AAF_MICRO_VERSION)
AC_SUBST(AAF_INTERFACE_AGE)
AC_SUBST(AAF_BINARY_AGE)
AC_SUBST(AAF_VERSION)

LT_RELEASE=$AAF_MAJOR_VERSION.$AAF_MINOR_VERSION
LT_CURRENT=`expr $AAF_MICRO_VERSION - $AAF_INTERFACE_AGE`
LT_REVISION=$AAF_INTERFACE_AGE
LT_AGE=`expr $AAF_BINARY_AGE - $AAF_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE(libaa, $AAF_VERSION)
AC_PROG_CXX
CXXFLAGS="-O9 -funroll-loops -fomit-frame-pointer -fno-exceptions"
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

AC_OUTPUT(Makefile src/Makefile)
