noinst_PROGRAMS = \
        example1 example2 example3 example4 example5

example1_SOURCES = example1.cpp
example1_LDADD = -laa

example2_SOURCES = example2.cpp
example2_LDADD = -laa

example3_SOURCES = example3.cpp
example3_LDADD = -laa -lEasyval

example4_SOURCES = example4.cpp
example4_LDADD = -laa -lEasyval

example5_SOURCES = example5.cpp
example5_LDADD = -laa -lEasyval
