noinst_PROGRAMS = \
        example1 example2 example6 example7

example1_SOURCES = example1.cpp
example1_LDADD = -laffa

example2_SOURCES = example2.cpp
example2_LDADD = -laffa

example6_SOURCES = example6.cpp
example6_LDADD = -laffa

example7_SOURCES = example7.cpp
example7_LDADD = -laffa

# these require Easyval

example3_SOURCES = example3.cpp
example3_LDADD = -laffa -lEasyval

example4_SOURCES = example4.cpp
example4_LDADD = -laffa -lEasyval

example5_SOURCES = example5.cpp
example5_LDADD = -laffa -lEasyval

